fixed responsive issue in add guest card upload button spilling out of card

--- a/client/src/components/AddGuest/style.css
+++ b/client/src/components/AddGuest/style.css
@@ -6,3 +6,9 @@
   width: 40vw;
   margin: auto;
 }
+
+@media only screen and (max-width: 540px) {
+  .add-guest-card {
+    width: 100%
+  }
+}
